Web_report_updates
Based on feedback from Jess Lee-Ack's email 09062020

--- a/.gitignore
+++ b/.gitignore
@@ -459,3 +459,4 @@ Data Project/Final Report/.Rproj.user/shared/notebooks/6FFFD7E5-FSSI Project Fin
 Data Project/Final Report/.Rproj.user/shared/notebooks/6FFFD7E5-FSSI Project Final Report/1/s/chunks.json
 Data Project/Final Report/.Rproj.user/shared/notebooks/patch-chunk-names
 Data Project/Final Report/.Rproj.user/shared/notebooks/paths
+.Rproj.user
